netbox/housekeeping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-housekeeping
  namespace: monitoring  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netbox
      role: housekeeping
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: netbox
        role: housekeeping
    spec:
      tolerations:
      - key: "namespace"
        operator: "Equal"
        value: "staging"
        effect: "NoSchedule"
      nodeSelector:
        name: "app-worker-node"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: netbox
                role: housekeeping
            topologyKey: "kubernetes.io/hostname"
      containers:
        - name: housekeeping
#          image: docker.io/testingsite279/uitoep:porl1
          image: docker.io/netboxcommunity/netbox:v4.0.2
          args:
            - /opt/netbox/housekeeping.sh     
          resources:
            requests:
              cpu: "0.1"
              memory: "0.5G"
