netbox/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-server
  namespace: monitoring  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netbox
      role: server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: netbox
        role: server
    spec:
      tolerations:
      - key: "namespace"
        operator: "Equal"
        value: "staging"
        effect: "NoSchedule"
      nodeSelector:
        name: "app-worker-node"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app: netbox
                role: server
            topologyKey: "kubernetes.io/hostname"
      containers:
        - name: server
#          image: docker.io/testingsite279/uitoep:porl1
          image: docker.io/netboxcommunity/netbox:v4.0.2
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/status/
              port: http
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: "0.1"
              memory: "2G"
