netbox/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbox
      role: worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: netbox
        role: worker
    spec:
      containers:
        - name: worker
          image: docker.io/netboxcommunity/netbox
          args:
            - /opt/netbox/venv/bin/python
            - /opt/netbox/netbox/manage.py
            - rqworker
      tolerations:
      - key: "namespace"
        operator: "Equal"
        value: "staging"
        effect: "NoSchedule"
      nodeSelector:
        name: "app-worker-node"
